RESOLVED FIXED99959
getBoundingClientRect() returns the incorrect rectangle on elements whose parent element is set -webkit-column-count
https://bugs.webkit.org/show_bug.cgi?id=99959
Summary getBoundingClientRect() returns the incorrect rectangle on elements whose par...
Tatsuya Nitta
Reported 2012-10-21 23:30:02 PDT
Created attachment 169831 [details] HTML file to reproduce the issue Overview: Element.getBoundingClientRect() returns incorrect value when the <p> element inside <div> element that is set -webkit-column-count. Steps to Reproduce: 1) Open the attached test file which contains <P> element inside <DIV> element that is set -webkit-column-count 2) Observe actual result of getBoundingClientRect() as gray colored box Actual Results: The actual result of getBoundingClientRect() is incorrect on element whose parent element is set -webkit-column-count Expected Results: getBoundingClientRect should return correct rectangle.
Attachments
HTML file to reproduce the issue (1.64 KB, text/html)
2012-10-21 23:30 PDT, Tatsuya Nitta
no flags
Screenshot of actual result (80.12 KB, image/png)
2012-10-21 23:31 PDT, Tatsuya Nitta
no flags
Patch (42.15 KB, patch)
2021-07-16 12:13 PDT, Simon Fraser (smfr)
zalan: review+
ews-feeder: commit-queue-
Patch (45.75 KB, patch)
2021-07-16 15:28 PDT, Simon Fraser (smfr)
ews-feeder: commit-queue-
Patch (47.80 KB, patch)
2021-07-16 16:08 PDT, Simon Fraser (smfr)
ews-feeder: commit-queue-
Patch (47.80 KB, patch)
2021-07-16 21:37 PDT, Simon Fraser (smfr)
no flags
Tatsuya Nitta
Comment 1 2012-10-21 23:31:47 PDT
Created attachment 169832 [details] Screenshot of actual result
Simon Fraser (smfr)
Comment 2 2021-07-16 12:13:26 PDT
Simon Fraser (smfr)
Comment 3 2021-07-16 13:00:57 PDT
Simon Fraser (smfr)
Comment 4 2021-07-16 15:28:02 PDT
Simon Fraser (smfr)
Comment 5 2021-07-16 16:08:43 PDT
EWS
Comment 6 2021-07-16 21:15:29 PDT
ChangeLog entry in LayoutTests/ChangeLog contains OOPS!.
Simon Fraser (smfr)
Comment 7 2021-07-16 21:37:38 PDT
EWS
Comment 8 2021-07-16 22:42:41 PDT
Committed r280017 (239759@main): <https://commits.webkit.org/239759@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433728 [details].
Note You need to log in before you can comment on or make changes to this bug.