Source/WebCore/rendering/RenderMultiColumnFlow.h
@@ -74,9 +74,9 @@ public:
 
     bool progressionIsReversed() const { return m_progressionIsReversed; }
     void setProgressionIsReversed(bool reversed) { m_progressionIsReversed = reversed; }
-    
-    RenderFragmentContainer* mapFromFlowToFragment(TransformState&) const override;
-    
+
+    RenderFragmentContainer* mapFromFlowToFragment(TransformState&) const final;
+
     // This method takes a logical offset and returns a physical translation that can be applied to map
     // a physical point (corresponding to the logical offset) into the fragment's physical coordinate space.
     LayoutSize physicalTranslationOffsetFromFlowToFragment(const RenderFragmentContainer*, const LayoutUnit) const;
